--- a/websites/style/main.css
+++ b/websites/style/main.css
@@ -67,19 +67,6 @@ li a {
   text-decoration: none;
   }
 
-  .navbar > a:nth-child(1){
-  background-color:powderblue;
-  }
-  .navbar > a:nth-child(2){
-  background-color:lightpink;
-  }
-  .navbar > a:nth-child(3){
-  background-color:powderblue;
-  }
-  .navbar > a:nth-child(4){
-  background-color:lightpink;
-  }
-
 .container {
   display: flex;
   flex-wrap: wrap;
@@ -99,4 +86,12 @@ li a {
   margin-top: 10px;
   margin-bottom: 10px;
   text-align: center;
+}
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: auto;
+  margin-bottom: auto;
+  width: 80%;
 }
